[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/campo.png" type="Texture" id=1]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Animations/PlayButtonAnim.anim" type="Animation" id=5]
[ext_resource path="res://Scenes/Panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/gear-64.png" type="Texture" id=7]
[ext_resource path="res://Assets/statistics-64.png" type="Texture" id=8]
[ext_resource path="res://Assets/question-mark-4-64.png" type="Texture" id=9]
[ext_resource path="res://Animations/buttons.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/BounceItLogo.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 150
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 140
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 80
outline_size = 5
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "transition"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Campo" type="Sprite" parent="."]
position = Vector2( 852, 640 )
scale = Vector2( 2.61111, 1 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Play" type="Button" parent="CanvasLayer/Control"]
margin_top = 504.0
margin_right = 720.0
margin_bottom = 672.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "PLAY"
flat = true

[node name="Shop" type="Button" parent="CanvasLayer/Control"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.719
margin_top = -8.0
margin_bottom = 7.67993
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
text = "SHOP"
flat = true

[node name="About" type="Button" parent="CanvasLayer/Control"]
margin_left = 622.0
margin_top = 1152.0
margin_right = 704.0
margin_bottom = 1256.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
icon = ExtResource( 9 )
flat = true

[node name="Settings" type="Button" parent="CanvasLayer/Control"]
margin_left = 512.0
margin_top = 1152.0
margin_right = 584.0
margin_bottom = 1256.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
icon = ExtResource( 7 )
flat = true

[node name="Stats" type="Button" parent="CanvasLayer/Control"]
margin_left = 16.0
margin_top = 1152.0
margin_right = 88.0
margin_bottom = 1256.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
icon = ExtResource( 8 )
flat = true

[node name="Title" type="Label" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 0.256
margin_bottom = 0.319977
custom_fonts/font = SubResource( 1 )
text = "Bouce It"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control"]
anims/PlayButtonAnim = ExtResource( 5 )

[node name="Panel" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.044
anchor_top = 0.387
anchor_right = 0.978
anchor_bottom = 0.737
margin_left = -7.68
margin_top = -15.36
margin_right = -0.160034
margin_bottom = -15.36

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 112.0
margin_top = 1144.0
margin_right = 448.0
margin_bottom = 1256.0
custom_fonts/font = SubResource( 12 )
text = "HS:"
valign = 1

[node name="Trans" type="CanvasLayer" parent="."]

[node name="Trans" type="Control" parent="Trans"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Trans/Trans"]
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0, 0, 0, 0 )

[node name="Transition" type="AnimationPlayer" parent="Trans/Trans"]
anims/RESET = SubResource( 6 )
anims/transition = SubResource( 7 )

[node name="BounceItLogo" type="Sprite" parent="."]
position = Vector2( 368, 377 )
texture = ExtResource( 11 )

[connection signal="pressed" from="CanvasLayer/Control/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Stats" to="." method="_on_Stats_pressed"]
[connection signal="animation_finished" from="Trans/Trans/Transition" to="." method="_on_Transition_animation_finished"]
